fix button alignment

--- a/resources/assets/styles/components/_forms.scss
+++ b/resources/assets/styles/components/_forms.scss
@@ -44,6 +44,7 @@ button {
   padding: 10px;
   font-weight: bold;
   text-decoration: none;
+  display: inline-block;
 }
 
 .button-row {
